--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PersonalWebsite</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="javascript.js"></script>
+</head>
+<body>
+    <!--GitHub repository, with:
+    More than one branch (including main/master), with descriptive branch name(s)
+    More than one commit, with descriptive commit messages
+    A descriptive Readme file
+    A functional website that fulfills the requirements, and includes:
+    three pages: home, about, work/portfolio
+    A persistent header with links
+    Personalized content, including both formatted text and images
+    Basic CSS styling, included via an external file
+    A "Hello world" tier Javascript function, loaded via an external file
+    e.g., a console.log of a given string
+    HTML/CSS/JavaScript files submitted via a GitHub repository -->
 
+     <!-- heading -->
+
+    <h1>
+        Lynnette Anne
+    </h1>
+
+     <!-- picture -->
+
+    <img src="selfie.jpg" alt="Universe Selfie">
+
+    <!--mission statement -->
+
+    <h3>
+        Mission Statement
+    </h3>
+
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos expedita maiores, eaque magnam corporis vitae numquam velit consequuntur ratione alias. Repellendus deleniti architecto exercitationem recusandae eius fugit assumenda harum quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque rem neque modi minus vero at consectetur eligendi voluptates. Tempora neque, eius in sapiente dolores est distinctio maxime fuga consequatur odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minus eveniet! Saepe accusamus necessitatibus pariatur at, iure labore magni qui nam cupiditate, et architecto, soluta rerum amet. Voluptate, magnam culpa. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate, fugit? Mollitia tenetur reprehenderit saepe obcaecati similique dolorem! Distinctio expedita voluptates voluptatem repellendus, itaque reprehenderit doloribus sed atque molestias dolores est.
+    </p>
+
+</body>
+</html>
