about me background and content

--- a/about.html
+++ b/about.html
@@ -1,1 +1,40 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About me</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="galaxy">
+
+    <!-- background image -->
+
+    <!-- <img src="galaxy.jpeg" alt="galaxy" class="ga
+    "> -->
+
+    <!-- navigation -->
+    <div class="nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+    </div>
+
+    <!-- heading -->
+
+    <h1>
+        Lynnette Anne
+    </h1>
+    
+    <h2>
+        About me
+    </h2>
+
+    <!-- paragraph -->
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aliquid earum, reiciendis fugit, animi, pariatur harum nesciunt suscipit consequuntur quas quia cumque nihil qui esse assumenda error sint quis illo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, quaerat doloribus! Voluptatibus, nesciunt rerum! Aut ducimus, nesciunt voluptatibus harum tempora facere rem neque repellendus nemo consequatur temporibus obcaecati! Facere, ab. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptatum eaque quibusdam deleniti! Earum, esse distinctio deserunt, tenetur inventore sint unde, minus provident dolor accusantium officiis dolorem sit sequi! Quia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae laudantium animi harum eaque, ad natus, ducimus ratione neque, excepturi necessitatibus id quod aspernatur error illum! Harum provident nihil ea quisquam.
+    </p>
+</body>
+</html>
