--- a/index.html
+++ b/index.html
@@ -22,25 +22,33 @@
     e.g., a console.log of a given string
     HTML/CSS/JavaScript files submitted via a GitHub repository -->
 
-     <!-- heading -->
+<!-- navigation -->
 
-    <h1>
-        Lynnette Anne
-    </h1>
+<div class="nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="portfolio.html">Portfolio</a>
+</div>
 
-     <!-- picture -->
+<!-- heading -->
 
-    <img src="selfie.jpg" alt="Universe Selfie">
+<h1>
+    Lynnette Anne
+</h1>
 
-    <!--mission statement -->
+<!-- picture -->
 
-    <h3>
-        Mission Statement
-    </h3>
+<img src="selfie.jpg" alt="Universe Selfie">
 
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos expedita maiores, eaque magnam corporis vitae numquam velit consequuntur ratione alias. Repellendus deleniti architecto exercitationem recusandae eius fugit assumenda harum quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque rem neque modi minus vero at consectetur eligendi voluptates. Tempora neque, eius in sapiente dolores est distinctio maxime fuga consequatur odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minus eveniet! Saepe accusamus necessitatibus pariatur at, iure labore magni qui nam cupiditate, et architecto, soluta rerum amet. Voluptate, magnam culpa. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate, fugit? Mollitia tenetur reprehenderit saepe obcaecati similique dolorem! Distinctio expedita voluptates voluptatem repellendus, itaque reprehenderit doloribus sed atque molestias dolores est.
-    </p>
+<!--mission statement -->
+
+<h3>
+    Mission Statement
+</h3>
+
+<p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos expedita maiores, eaque magnam corporis vitae numquam velit consequuntur ratione alias. Repellendus deleniti architecto exercitationem recusandae eius fugit assumenda harum quo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque rem neque modi minus vero at consectetur eligendi voluptates. Tempora neque, eius in sapiente dolores est distinctio maxime fuga consequatur odit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minus eveniet! Saepe accusamus necessitatibus pariatur at, iure labore magni qui nam cupiditate, et architecto, soluta rerum amet. Voluptate, magnam culpa. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate, fugit? Mollitia tenetur reprehenderit saepe obcaecati similique dolorem! Distinctio expedita voluptates voluptatem repellendus, itaque reprehenderit doloribus sed atque molestias dolores est.
+</p>
 
 </body>
 </html>
