js alert and linking js file

--- a/about.html
+++ b/about.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
     <link rel="stylesheet" href="style.css">
+    <script src="javascript.js"></script>
 </head>
 <body class="galaxy">
 
-    <!-- background image -->
+    <!-- alert box -->
 
-    <!-- <img src="galaxy.jpeg" alt="galaxy" class="ga
-    "> -->
+
 
     <!-- navigation -->
     <div class="nav">
