--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PersonalWebsite</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="javascript.js"></script>
+    <!-- <script defer src="javascript.js"></script> -->
 </head>
 <body>
     <!--GitHub repository, with:
