--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,14 @@ email field
 message field
 submit button
 -->
+<form action="">
+<label for="email">email</label><br>
+<input type="text" id="email" name="email"><br>
+<label for="message">message</label><br>
+<input type="text" id="message" name="message"><br>
+<input type="submit" value="submit">
 
+</form>
 
 
     
