--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,17 @@
     <title>ContactMe</title>
 </head>
 <body>
+
+    <!--
+        navigation
+    -->
+    <div class="nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact Me</a>
+    </div>   
+    
 <!--
 contect form: name field
 email field
