--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@ submit button
     input types. Form must have a functional submit button 
     leading to another page. -->
 
-<form>
+<form action="index.html">
 <label for="name">name</label><br>
 <input type="text" id="name" name="name"><br> 
 <label for="email">email</label><br>
@@ -40,7 +40,7 @@ submit button
 <label for="message">message</label><br>
 <input type="text" id="message" name="message"><br>
 <!-- <input type="submit" value="submit"> -->
-<button onclick="showAlert()">Submit</button>
+<button onclick=index.html>Submit</button>
 
 </form>
 
