--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,8 @@ submit button
 <label for="message">message</label><br>
 <input type="text" id="message" name="message"><br>
 <!-- <input type="submit" value="submit"> -->
-<button onclick=index.html>Submit</button>
+<button onclick=index.html>Submit</button><br><br>
+<input type="reset">
 
 </form>
 
