--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@ submit button
     input types. Form must have a functional submit button 
     leading to another page. -->
 
-<form action="index.html">
+<form action="submit.html">
 <label for="name">name</label><br>
 <input type="text" id="name" name="name"><br> 
 <label for="email">email</label><br>
